infrastructure/app/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: backend-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
